TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_after.dot
digraph AST {
  "135522471564608" [label="Start"];
  "135522471564608" -> "135522471564752";
  "135522471564752" [label="Code"];
  "135522471564752" -> "135522471564944";
  "135522471564944" [label="Function"];
  "135522471564944" -> "135522471565136";
  "135522471564944" -> "135522471565280";
  "135522471564944" -> "135522471565424";
  "135522471565136" [label="main"];
  "135522471565280" [label="Parameters"];
  "135522471565424" [label="Code"];
  "135522471565424" -> "135522471565616";
  "135522471565424" -> "135522471566192";
  "135522471565424" -> "135522471566768";
  "135522471565616" [label="Scope"];
  "135522471565616" -> "135522471565808";
  "135522471565808" [label="Declaration"];
  "135522471565808" -> "135522471566000";
  "135522471565808" -> "135522471566144";
  "135522471566000" [label="x"];
  "135522471566144" [label="1"];
  "135522471566192" [label="Scope"];
  "135522471566192" -> "135522471566384";
  "135522471566384" [label="Declaration"];
  "135522471566384" -> "135522471566576";
  "135522471566384" -> "135522471566720";
  "135522471566576" [label="x"];
  "135522471566720" [label="2"];
  "135522471566768" [label="Return"];
  "135522471566768" -> "135522471566960";
  "135522471566960" [label="0"];
}
